--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Выращиваем лук дома. Инструкция</title>
+<title>Зелёный лук на подоконнике дома</title>
 <meta property="og:locale" content="ru_RU" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Выращиваем лук дома. Инструкция" />
+<meta property="og:title" content="Зелёный лук на подоконнике дома" />
 <meta property="og:type" content="website">
-<meta property="og:description" content="Выращиваем лук дома на подоконнике при помощи пошаговой инструкции" />
+<meta property="og:description" content="Как вырастить зелёный лук на подоконнике" />
 <link media="all" href="index.css" type="text/css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="bootstrap.min.js"></script>
